Fix vertical misalignment in Firefox

--- a/css/jquery.fileupload.css
+++ b/css/jquery.fileupload.css
@@ -21,7 +21,6 @@
   margin: 0;
   opacity: 0;
   -ms-filter: 'alpha(opacity=0)';
-  font-size: 200px;
   direction: ltr;
   cursor: pointer;
 }
